hphp/hack/test/typecheck/constraints/class_type_parameter.php.exp
File "class_type_parameter.php", line 6, characters 34-46:
Some type constraint(s) here are violated (Typing[4323])
File "class_type_parameter.php", line 3, characters 22-22:
'T' is a constrained type parameter
File "class_type_parameter.php", line 3, characters 27-29:
Expected num
File "class_type_parameter.php", line 6, characters 45-45:
But got T
